<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="com.example.zender.zenderswim1.MainActivity">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/tb_more"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="?attr/colorPrimary"
            />
        <Switch
            android:id="@+id/unitSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/unit_switch_metr"
            android:layout_below="@id/tb_more"
            />
        <TextView
            android:id="@+id/tv_height"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_below="@id/unitSwitch"
            android:text="@string/lab_height"
            android:textSize="18sp"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/et_height"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:layout_below="@id/unitSwitch"
            android:padding="10dp"
            android:layout_toEndOf="@+id/tv_height"/>
        <TextView
            android:id="@+id/unit_height"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/et_height"
            android:layout_below="@id/unitSwitch"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/unit_height_metr"
            />
        <TextView
            android:id="@+id/tv_mass"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/lab_mass"
            android:layout_below="@id/tv_height"
            android:textSize="18sp"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/et_mass"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:layout_toEndOf="@id/tv_mass"
            android:layout_below="@id/et_height"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/unit_mass"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/et_mass"
            android:layout_below="@id/et_height"
            android:text="@string/unit_mass_metr"
            android:textSize="18sp"
            android:padding="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/button"
            android:layout_below="@+id/tv_mass"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/tv_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lab_result"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button"
            />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="80sp"
            android:layout_below="@+id/tv_bmi"
            />
    </RelativeLayout>
</ScrollView>